# MAV-scraper

./: .gitignore  README.md  main.py  pyproject.toml  slender.py
.github/workflows/: action.yml
mav_scraper/: pipeline.py
mav_scraper/data/parquet_store/: parsed_train_schedules.parquet  parsed_train_shapes.parquet  spot_train_locations.parquet
mav_scraper/data/parsed_train_schedules/: 36H1118_1050930#933_241209.csv  36H2068_1050761#953_241209.csv  36H4218_1050335#1147_241209.csv  36H8000_1050454#977_241209.csv  55149_6995254_241209.csv  552010_6812477_241210.csv  552181_6824173_241209.csv  552188_6823810_241209.csv  552361_6830490_241209.csv  552398_6829991_241209.csv  552510_6830501_241210.csv  552598_6831079_241209.csv  552621_6834907_241209.csv  552638_6834911_241209.csv  552648_6834899_241209.csv  552958_6874643_241209.csv  552968_6874467_241209.csv  553068_6823631_241209.csv  5532258_6832992_241209.csv  5533104_6823729_241209.csv  553351_6831512_241209.csv  553378_6831223_241209.csv  553388_6831228_241209.csv  5536028_6830850_241209.csv  5537038_7904144_241209.csv  5537638_6867065_241209.csv  554138_6828266_241209.csv  554768_7570938_241209.csv  554770_7570939_241210.csv  554951_6831780_241209.csv  554958_6828492_241209.csv  554968_6828493_241209.csv  555008_6827830_241209.csv  555018_6831031_241209.csv  555158_6828222_241209.csv  555848_6832402_241209.csv  556098_8173577_241209.csv  556338_6835328_241209.csv  556648_6834157_241209.csv  557028_6980316_241209.csv  (+1 more)
mav_scraper/requester/: request_train_data.py
mav_scraper/slender/: __init__.py  slender.py
(+61 files in other folders)
